Fix wrong positioning of groupcollapsed members labels on right-side (in LTR, or left-side in RTL) mode #3869

--- a/webextensions/sidebar/styles/base.css
+++ b/webextensions/sidebar/styles/base.css
@@ -1287,6 +1287,11 @@ tab-item[type="group-collapsed-members-counter"] {
     --tab-border: transparent !important;
     --tab-text: light-dark(var(--tab-group-color), var(--tab-group-color-pale)) !important;
   }
+
+  :root:not(.rtl).right & tab-label,
+  :root.rtl.left & tab-label {
+    text-align: end;
+  }
 }
 
 
